# tokenizer

./: .eslintrc.json  .gitignore  .npmrc  .prettierrc.json  .rustfmt.toml  .swcrc  Cargo.toml  LICENSE  README.md  imports.d.ts  package.json  rollup.config.js  tsconfig.json
lib/: index.ts  webmodule.ts
src/: lib.rs  tiktoken.rs
tests/: test.js
wit/: tokenizer.wit
