[package]
name = "tokenizer"
authors = ["Christian Sdunek <me@systemcluster.me>"]
description = "General Tokenizer Library"
version = "0.0.1"
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
resolver = "2"
publish = false

[lib]
name = "tokenizer"
crate-type = ["cdylib"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
panic = "unwind"
strip = "symbols"

[dependencies]
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
bstr = { version = "1.3.0", default-features = false, features = ["alloc"] }
fancy-regex = { version = "0.11.0", default-features = false, features = ["unicode"] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
serde = { version = "1.0.152", default-features = false, features = ["alloc", "derive"] }
serde_with = { version = "2.2.0", default-features = false, features = ["alloc", "macros"] }
ciborium = { version = "0.2.0", default-features = false }
